--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="main-games">
           <div class="main-games-month">Ноябрь</div>
           <div class="main-games-wrap">
-            <div class="main-games-unit">
+            <div class="main-games-unit main-games-unit_disabled" data-city="Москва">
               <div class="main-games-unit-date">36</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
@@ -40,7 +40,7 @@
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
-            <div class="main-games-unit main-games-unit_disabled">
+            <div class="main-games-unit main-games-unit_disabled" data-city="Санкт-Петербург">
               <div class="main-games-unit-date">15</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
@@ -48,7 +48,7 @@
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
-            <div class="main-games-unit main-games-unit_disabled">
+            <div class="main-games-unit main-games-unit_disabled" data-city="Санкт-Петербург">
               <div class="main-games-unit-date">16</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
@@ -86,11 +86,15 @@
       <div class="popup-wrap">
         <div class="popup-title">Регистрация на игру</div>
         <div class="popup-close"></div>
-        <div class="popup-form">
-          <input type="text" placeholder="Ваше имя" required>
-          <input id="inputMaskPhone" type="phone" placeholder="Телефон" required>
-          <input type="email" placeholder="Электронная почта" required>
-          <input class="button button_orange" type="submit" value="Дальше">
+        <div class="popup-form popup-form_offline">
+          <input type="hidden" id="gameDate" name="gameDate" value="">
+          <input type="hidden" id="gameCity" name="gameCity" value="">
+          <input type="hidden" name="gamePlace" id="gamePlace" value="">
+          <input type="hidden" name="gameTag" id="gameTag" value="BakerHughes">
+          <input type="text" name="contactName" id="contactName" placeholder="Ваше имя" required>
+          <input id="inputMaskPhone" type="phone" name="contactPhone" placeholder="Телефон" required>
+          <input type="email" name="contactEmail" id="contactEmail" placeholder="Электронная почта" required>
+          <input class="button button_orange popup-form-submit" type="submit" value="Дальше">
         </div>
       </div>
     </div>
