--- a/test.html
+++ b/test.html
@@ -149,17 +149,17 @@
                 <div class="test-content-unit_result-timer">
                   <div class="test-content-unit_result-timer-title">Старт зачетной игры через:</div>
                   <div class="test-content-unit_result-timer-wrap">
-                    <div class="test-content-unit_result-timer-unit test-content-unit_result-timer-unit_day">
+                    <div class="test-content-unit_result-timer-unit test-content-unit_result-timer-unit_days">
                       <div class="test-content-unit_result-timer-unit-title">Д</div>
                       <div class="test-content-unit_result-timer-unit-number">17</div>
                     </div>
                     <div class="test-content-unit_result-timer-unit_divider">:</div>
-                    <div class="test-content-unit_result-timer-unit test-content-unit_result-timer-unit_day">
+                    <div class="test-content-unit_result-timer-unit test-content-unit_result-timer-unit_hours">
                       <div class="test-content-unit_result-timer-unit-title">Ч</div>
                       <div class="test-content-unit_result-timer-unit-number">03</div>
                     </div>
                     <div class="test-content-unit_result-timer-unit_divider">:</div>
-                    <div class="test-content-unit_result-timer-unit test-content-unit_result-timer-unit_day">
+                    <div class="test-content-unit_result-timer-unit test-content-unit_result-timer-unit_minutes">
                       <div class="test-content-unit_result-timer-unit-title">М</div>
                       <div class="test-content-unit_result-timer-unit-number">45</div>
                     </div>
@@ -175,11 +175,13 @@
       <div class="popup-wrap">
         <div class="popup-title">Регистрация на игру</div>
         <div class="popup-close"></div>
-        <div class="popup-form">
-          <input type="text" placeholder="Ваше имя" required>
-          <input id="inputMaskPhone" type="phone" placeholder="Телефон" required>
-          <input type="email" placeholder="Электронная почта" required>
-          <input class="button button_orange" type="submit" value="Дальше">
+        <div class="popup-form popup-form_online">
+          <input type="hidden" name="onlineGame" id="onlineGame" value="Онлайн игра">
+          <input type="hidden" name="gameTag" id="gameTag" value="BakerHughes">
+          <input type="text" name="contactName" id="contactName" placeholder="Ваше имя" required>
+          <input id="inputMaskPhone" type="phone" name="contactPhone" placeholder="Телефон" required>
+          <input type="email" name="contactEmail" id="contactEmail" placeholder="Электронная почта" required>
+          <input class="button button_orange popup-form-submit" type="submit" value="Дальше">
         </div>
       </div>
     </div>
