поправил заголовки, комменты в вопросах

--- a/test.html
+++ b/test.html
@@ -2,19 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Test</title>
+    <title>Онлайн игра! «Мозгва» для Backer Hughes</title>
+      <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/media.css"/>
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
+
+    <meta property="og:title" content="«Мозгва» для Backer Hughes" />
+    <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете" />
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/soc.png" />
   </head>
   <body>
     <div class="test">
       <div class="container">
         <div class="test-header">
-          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="#/"><img src="images/bh-logo_alt.svg" alt=""></a><a class="header-logo header-logo_02" href="#/"><img src="images/mzgv-logo.svg" alt=""></a></div>
+          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo_alt.svg" alt=""></a><a class="header-logo header-logo_02" href="/"><img src="images/mzgv-logo.svg" alt=""></a></div>
         </div>
         <div class="test-body-wrap">
           <div class="test-body"><img class="test-filler test-filler-01" src="images/filler-01.png" alt=""><img class="test-filler test-filler-02" src="images/filler-03.png"><img class="test-filler test-filler-03" src="images/filler-07.png"><img class="test-filler test-filler-04" src="images/filler-05.png"><img class="test-filler test-filler-05" src="images/filler-06.png">
@@ -47,9 +52,9 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text"> 
-                      <div class="test-content-unit-bottom-results-text-inner_correct">Конечно, Аргентина! Вы абсолютно правы!</div>
-                      <div class="test-content-unit-bottom-results-text-inner_wrong">Нет. правильный ответ - Аргентина.</div>
+                    <div class="test-content-unit-bottom-results-text">
+                      <div class="test-content-unit-bottom-results-text-inner_correct">Еще какая! Потому что серебро — это Argentum, а это уже Аргентина.</div>
+                      <div class="test-content-unit-bottom-results-text-inner_wrong">Ну нет же, это Аргентина, потому что Argentum - это серебро.</div>
                     </div>
                   </div>
                 </div>
@@ -65,9 +70,9 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text"> 
-                      <div class="test-content-unit-bottom-results-text-inner_correct">Конечно, Аргентина! Вы абсолютно правы!</div>
-                      <div class="test-content-unit-bottom-results-text-inner_wrong">Нет. правильный ответ - Аргентина.</div>
+                    <div class="test-content-unit-bottom-results-text">
+                      <div class="test-content-unit-bottom-results-text-inner_correct">О, да. Это тоскливый и лирический блюз, как раз для осени!</div>
+                      <div class="test-content-unit-bottom-results-text-inner_wrong">Да нет, если “тоска зеленая”, то это сразу блюз. Хотя для некоторых это может быть опера , но это блюз.</div>
                     </div>
                   </div>
                 </div>
@@ -83,9 +88,9 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text"> 
-                      <div class="test-content-unit-bottom-results-text-inner_correct">Конечно, Аргентина! Вы абсолютно правы!</div>
-                      <div class="test-content-unit-bottom-results-text-inner_wrong">Нет. правильный ответ - Аргентина.</div>
+                    <div class="test-content-unit-bottom-results-text">
+                      <div class="test-content-unit-bottom-results-text-inner_correct">Конечно что же это Чак наш дорогой Норрис, все поклоны книге только ему.</div>
+                      <div class="test-content-unit-bottom-results-text-inner_wrong">Зря вы не ответили Чак Норрис, потому что это правильный ответ. Теперь каждый сам за себя!</div>
                     </div>
                   </div>
                 </div>
@@ -101,9 +106,9 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text"> 
-                      <div class="test-content-unit-bottom-results-text-inner_correct">Конечно, Аргентина! Вы абсолютно правы!</div>
-                      <div class="test-content-unit-bottom-results-text-inner_wrong">Нет. правильный ответ - Аргентина.</div>
+                    <div class="test-content-unit-bottom-results-text">
+                      <div class="test-content-unit-bottom-results-text-inner_correct">Баптист это,  конечно. Хотя другие варианты тоже веселые</div>
+                      <div class="test-content-unit-bottom-results-text-inner_wrong">А вы точно из нефтепромышленности? Потому что это не Столичная или Борис Петрович, а Баптист. Так -то!</div>
                     </div>
                   </div>
                 </div>
@@ -119,9 +124,9 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text"> 
-                      <div class="test-content-unit-bottom-results-text-inner_correct">Конечно, Аргентина! Вы абсолютно правы!</div>
-                      <div class="test-content-unit-bottom-results-text-inner_wrong">Нет. правильный ответ - Аргентина.</div>
+                    <div class="test-content-unit-bottom-results-text">
+                      <div class="test-content-unit-bottom-results-text-inner_correct">Верно, это «Zippo» с их зажигалками и с нашим факелом. В самом деле спасли!</div>
+                      <div class="test-content-unit-bottom-results-text-inner_wrong">Это все весело, но нет. Факел потух, а «Zippo» его зажгли.</div>
                     </div>
                   </div>
                 </div>
@@ -137,9 +142,9 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text"> 
-                      <div class="test-content-unit-bottom-results-text-inner_correct">Конечно, Аргентина! Вы абсолютно правы!</div>
-                      <div class="test-content-unit-bottom-results-text-inner_wrong">Нет. правильный ответ - Аргентина.</div>
+                    <div class="test-content-unit-bottom-results-text">
+                      <div class="test-content-unit-bottom-results-text-inner_correct">Признавайтесь, вы - Лозафан, потому что это правильный ответ и кому нужны слезы на маленьком плоту!</div>
+                      <div class="test-content-unit-bottom-results-text-inner_wrong">Так себе вы знаете хит тысячелетия, но теперь эта песня будет с вами весь день. Поздравляем! А правильный ответ - слезы.</div>
                     </div>
                   </div>
                 </div>
