--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Index</title>
+    <title>Интеллектуальная олимпиада - «Мозгва» для Backer Hughes</title>
+    <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/media.css"/>
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
+
+    <meta property="og:title" content="«Мозгва» для Backer Hughes" />
+    <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете" />
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/soc.png" />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header-wrap">
-          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="#/"><img src="images/bh-logo.svg" alt=""/></a><a class="header-logo header-logo_02" href="#/"><img src="images/mzgv-logo.svg" alt=""/></a></div>
-          <div class="header-title">Интеллектуальная олимпиада</div><a class="button button_orange header-button" href="#/">Не смогу участвовать</a>
+          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo.svg" alt=""/></a><a class="header-logo header-logo_02" href="/"><img src="images/mzgv-logo.svg" alt=""/></a></div>
+          <div class="header-title">Интеллектуальная олимпиада</div><a class="button button_orange header-button" href="/test.html">Не смогу участвовать</a>
         </div>
       </div>
     </header>
