добавил города и фавиконку

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Интеллектуальная олимпиада - «Мозгва» для Backer Hughes</title>
     <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
+    <link rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon" />
     <meta name="format-detection" content="telephone=no"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/media.css"/>
@@ -30,31 +31,64 @@
         <div class="main-select select-wrap">
           <select name="select city">
             <option></option>
+            <option>Тюмень</option>
             <option>Москва</option>
-            <option>Санкт-Петербург</option>
+            <option>Нижневартовск</option>
+            <option>Нефтеюганск</option>
+            <option>Ноябрьск</option>
+            <option>Сахалин</option>
           </select>
+        </div>
+        <div class="main-games">
+          <div class="main-games-month">Октябрь</div>
+          <div class="main-games-wrap">
+            <div class="main-games-unit main-games-unit_disabled" data-city="Тюмень">
+              <div class="main-games-unit-date">18</div>
+              <div class="main-games-unit-info">
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+              </div>
+              <div class="main-games-unit-button button button_orange register">Участвовать</div>
+            </div>
+            <div class="main-games-unit main-games-unit_disabled" data-city="Москва">
+              <div class="main-games-unit-date">18</div>
+              <div class="main-games-unit-info">
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+              </div>
+              <div class="main-games-unit-button button button_orange register">Участвовать</div>
+            </div>
+            <div class="main-games-unit main-games-unit_disabled" data-city="Нижневартовск">
+              <div class="main-games-unit-date">25</div>
+              <div class="main-games-unit-info">
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
+              </div>
+              <div class="main-games-unit-button button button_orange register">Участвовать</div>
+            </div>
+          </div>
         </div>
         <div class="main-games">
           <div class="main-games-month">Ноябрь</div>
           <div class="main-games-wrap">
-            <div class="main-games-unit main-games-unit_disabled" data-city="Москва">
-              <div class="main-games-unit-date">36</div>
+            <div class="main-games-unit main-games-unit_disabled" data-city="Нефтеюганск">
+              <div class="main-games-unit-date">1</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
-            <div class="main-games-unit main-games-unit_disabled" data-city="Санкт-Петербург">
-              <div class="main-games-unit-date">15</div>
+            <div class="main-games-unit main-games-unit_disabled" data-city="Ноябрьск">
+              <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
-            <div class="main-games-unit main-games-unit_disabled" data-city="Санкт-Петербург">
-              <div class="main-games-unit-date">16</div>
+            <div class="main-games-unit main-games-unit_disabled" data-city="Сахалин">
+              <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
