--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <title>Онлайн игра! «Мозгва» для Backer Hughes</title>
       <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
+    <link rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon" />
     <meta name="format-detection" content="telephone=no"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/media.css"/>
