--- a/test.html
+++ b/test.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <!-- Google Tag Manager -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-N3R5QZ');</script>
+    <!-- End Google Tag Manager -->
     <title>Онлайн игра! «Мозгва» для Backer Hughes</title>
       <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
@@ -14,9 +21,13 @@
 
     <meta property="og:title" content="«Мозгва» для Backer Hughes" />
     <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете" />
-    <meta property="og:image" content="http://baker-hughes.mozgva.ru/soc.png" />
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min.png" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3R5QZ"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="test">
       <div class="container">
         <div class="test-header">
