--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
     </div>
-    <div class="popup">
+    <div class="popup popup_form">
       <div class="popup-wrap">
         <div class="popup-title">Регистрация на игру</div>
         <div class="popup-close"></div>
@@ -146,6 +146,11 @@
           <input type="email" name="contactEmail" id="contactEmail" placeholder="Электронная почта" required>
           <input class="button button_orange popup-form-submit" type="submit" value="Дальше">
         </div>
+      </div>
+    </div>
+    <div class="popup popup_finish">
+      <div class="popup-wrap">
+        <div class="popup-title">Спасибо за регистрацию!</div>
       </div>
     </div>
   </body>
