Поменял названия площадок

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Тюмень">
               <div class="main-games-unit-date">18</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Тюмень</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -64,7 +64,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Москва">
               <div class="main-games-unit-date">18</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Москва</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -72,7 +72,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Нижневартовск">
               <div class="main-games-unit-date">25</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Нижневартовск</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -85,7 +85,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Нефтеюганск">
               <div class="main-games-unit-date">1</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Нефтеюганск</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -93,7 +93,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Ноябрьск">
               <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Ноябрьск</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -101,7 +101,7 @@
             <div class="main-games-unit main-games-unit_disabled" data-city="Сахалин">
               <div class="main-games-unit-date">8</div>
               <div class="main-games-unit-info">
-                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">«Название площадки» </div>
+                <div class="main-games-unit-info-unit main-games-unit-info-unit_place">Сахалин</div>
                 <div class="main-games-unit-info-unit main-games-unit-info-unit_time">20:00</div>
               </div>
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
@@ -111,15 +111,11 @@
         <div class="main-info">
           <div class="main-info-unit">
             <div class="main-info-unit-title">Как подготовиться?</div>
-            <div class="main-info-unit-text">Никак, вы уже готовы :) из того что надо взять с собой, это хорошее настроение. Всем остальным мы обеспечим вас на игре.</div>
+            <div class="main-info-unit-text">Никак, вы уже готовы! Все, что нужно взять с собой - хорошее настроение. Всем остальным мы обеспечим вас на игре.</div>
           </div>
           <div class="main-info-unit">
             <div class="main-info-unit-title">Где это будет происходить?</div>
-            <div class="main-info-unit-text">В Вашем городе или ближайшем к вам городе. Игра проходит в ресторане, регистрируйтесь и просто приходите в назначенное место и время. А еще мы позвоним вам за день до игры подтвердить ваше участие.</div>
-          </div>
-          <div class="main-info-unit">
-            <div class="main-info-unit-title">Дресс-код?</div>
-            <div class="main-info-unit-text">Да, мероприятие официальное, все будут нарядными.</div>
+            <div class="main-info-unit-text">В вашем или ближайшем к вам городе. Игра будет в ресторане - регистрируйтесь и просто приходите в назначенное место. За день до игры мы позвоним вам, чтобы подтвердить ваше участие.</div>
           </div>
           <div class="main-info-unit">
             <div class="main-info-unit-title">Что такое «Мозгва»?</div>
