--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
         <div class="test-body-wrap">
           <div class="test-body"><img class="test-filler test-filler-01" src="images/filler-01.png" alt=""><img class="test-filler test-filler-02" src="images/filler-03.png"><img class="test-filler test-filler-03" src="images/filler-07.png"><img class="test-filler test-filler-04" src="images/filler-05.png"><img class="test-filler test-filler-05" src="images/filler-06.png">
             <div class="test-info">
-              <div class="test-info-unit test-info-unit_date">16 Октября</div>
+              <div class="test-info-unit test-info-unit_date">16 октября</div>
               <div class="test-info-unit test-info-unit_time">20:00</div>
               <div class="test-info-text">Игра произойдет здесь, по московскому времени. Отправьте нам свои контактные данные, и мы вам напомним о начале игры.</div>
               <div class="test-info-button button register button_orange">Зарегистрироваться</div>
