Import html changes to jade; game date changed to 22.10.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <!-- Google Tag Manager -->
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-N3R5QZ');</script>
-    <!-- End Google Tag Manager -->
+    <meta charset="utf-8"/><!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-N3R5QZ');</script><!-- End Google Tag Manager -->
     <title>Интеллектуальная олимпиада - «Мозгва» для Backer Hughes</title>
-    <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
+    <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
-    <link rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon" />
     <meta name="format-detection" content="telephone=no"/>
+    <link rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/media.css"/>
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
-
-    <meta property="og:title" content="«Мозгва» для Backer Hughes" />
-    <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете" />
-    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min.png" />
+    <meta property="og:title" content="«Мозгва» для Backer Hughes"/>
+    <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете"/>
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min"/>
   </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3R5QZ"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+  <body><!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3R5QZ" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript><!-- End Google Tag Manager (noscript) -->
     <header class="header">
       <div class="container">
         <div class="header-wrap">
@@ -78,8 +70,6 @@
               <div class="main-games-unit-button button button_orange register">Участвовать</div>
             </div>
           </div>
-        </div>
-        <div class="main-games">
           <div class="main-games-month">Ноябрь</div>
           <div class="main-games-wrap">
             <div class="main-games-unit main-games-unit_disabled" data-city="Нефтеюганск">
@@ -111,11 +101,11 @@
         <div class="main-info">
           <div class="main-info-unit">
             <div class="main-info-unit-title">Как подготовиться?</div>
-            <div class="main-info-unit-text">Никак, вы уже готовы! Все, что нужно взять с собой - хорошее настроение. Всем остальным мы обеспечим вас на игре.</div>
+            <div class="main-info-unit-text">Никак, вы уже готовы :) из того что надо взять с собой, это хорошее настроение. Всем остальным мы обеспечим вас на игре.</div>
           </div>
           <div class="main-info-unit">
             <div class="main-info-unit-title">Где это будет происходить?</div>
-            <div class="main-info-unit-text">В вашем или ближайшем к вам городе. Игра будет в ресторане - регистрируйтесь и просто приходите в назначенное место. За день до игры мы позвоним вам, чтобы подтвердить ваше участие.</div>
+            <div class="main-info-unit-text">В Вашем городе или ближайшем к вам городе. Игра проходит в ресторане, регистрируйтесь и просто приходите в назначенное место и время. А еще мы позвоним вам за день до игры подтвердить ваше участие.</div>
           </div>
           <div class="main-info-unit">
             <div class="main-info-unit-title">Что такое «Мозгва»?</div>
