--- a/test.html
+++ b/test.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <!-- Google Tag Manager -->
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-N3R5QZ');</script>
-    <!-- End Google Tag Manager -->
+    <meta charset="utf-8"/><!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-N3R5QZ');</script><!-- End Google Tag Manager -->
     <title>Онлайн игра! «Мозгва» для Backer Hughes</title>
-      <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете">
+    <meta name="description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
-    <link rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon" />
     <meta name="format-detection" content="telephone=no"/>
+    <link rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/media.css"/>
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
-
-    <meta property="og:title" content="«Мозгва» для Backer Hughes" />
-    <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете" />
-    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min.png" />
+    <meta property="og:title" content="«Мозгва» для Backer Hughes"/>
+    <meta property="og:description" content="Что такое «Мозгва»? Это игра, в которой мы задаем вам вопросы на логику, эрудицию и интуицию, а вы на них отвечаете"/>
+    <meta property="og:image" content="http://baker-hughes.mozgva.ru/images/bh-snippet-min"/>
   </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3R5QZ"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+  <body><!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3R5QZ" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript><!-- End Google Tag Manager (noscript) -->
     <div class="test">
       <div class="container">
         <div class="test-header">
-          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="/"><img src="images/bh-logo_alt.svg" alt=""></a><a class="header-logo header-logo_02" href="/"><img src="images/mzgv-logo.svg" alt=""></a></div>
+          <div class="header-logo-wrap"><a class="header-logo header-logo_01" href="#/"><img src="images/bh-logo_alt.svg" alt=""></a><a class="header-logo header-logo_02" href="#/"><img src="images/mzgv-logo.svg" alt=""></a></div>
         </div>
         <div class="test-body-wrap">
           <div class="test-body"><img class="test-filler test-filler-01" src="images/filler-01.png" alt=""><img class="test-filler test-filler-02" src="images/filler-03.png"><img class="test-filler test-filler-03" src="images/filler-07.png"><img class="test-filler test-filler-04" src="images/filler-05.png"><img class="test-filler test-filler-05" src="images/filler-06.png">
             <div class="test-info">
-              <div class="test-info-unit test-info-unit_date">16 октября</div>
+              <div class="test-info-unit test-info-unit_date">22 Октября</div>
               <div class="test-info-unit test-info-unit_time">20:00</div>
               <div class="test-info-text">Игра произойдет здесь, по московскому времени. Отправьте нам свои контактные данные, и мы вам напомним о начале игры.</div>
               <div class="test-info-button button register button_orange">Зарегистрироваться</div>
@@ -64,7 +56,7 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text">
+                    <div class="test-content-unit-bottom-results-text"> 
                       <div class="test-content-unit-bottom-results-text-inner_correct">Еще какая! Потому что серебро — это Argentum, а это уже Аргентина.</div>
                       <div class="test-content-unit-bottom-results-text-inner_wrong">Ну нет же, это Аргентина, потому что Argentum - это серебро.</div>
                     </div>
@@ -82,7 +74,7 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text">
+                    <div class="test-content-unit-bottom-results-text"> 
                       <div class="test-content-unit-bottom-results-text-inner_correct">О, да. Это тоскливый и лирический блюз, как раз для осени!</div>
                       <div class="test-content-unit-bottom-results-text-inner_wrong">Да нет, если “тоска зеленая”, то это сразу блюз. Хотя для некоторых это может быть опера , но это блюз.</div>
                     </div>
@@ -100,7 +92,7 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text">
+                    <div class="test-content-unit-bottom-results-text"> 
                       <div class="test-content-unit-bottom-results-text-inner_correct">Конечно что же это Чак наш дорогой Норрис, все поклоны книге только ему.</div>
                       <div class="test-content-unit-bottom-results-text-inner_wrong">Зря вы не ответили Чак Норрис, потому что это правильный ответ. Теперь каждый сам за себя!</div>
                     </div>
@@ -118,7 +110,7 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text">
+                    <div class="test-content-unit-bottom-results-text"> 
                       <div class="test-content-unit-bottom-results-text-inner_correct">Баптист это,  конечно. Хотя другие варианты тоже веселые</div>
                       <div class="test-content-unit-bottom-results-text-inner_wrong">А вы точно из нефтепромышленности? Потому что это не Столичная или Борис Петрович, а Баптист. Так -то!</div>
                     </div>
@@ -136,7 +128,7 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text">
+                    <div class="test-content-unit-bottom-results-text"> 
                       <div class="test-content-unit-bottom-results-text-inner_correct">Верно, это «Zippo» с их зажигалками и с нашим факелом. В самом деле спасли!</div>
                       <div class="test-content-unit-bottom-results-text-inner_wrong">Это все весело, но нет. Факел потух, а «Zippo» его зажгли.</div>
                     </div>
@@ -154,7 +146,7 @@
                   </div>
                   <div class="test-content-unit-bottom-results">
                     <div class="test-content-unit-bottom-results-button">Следующий вопрос!</div>
-                    <div class="test-content-unit-bottom-results-text">
+                    <div class="test-content-unit-bottom-results-text"> 
                       <div class="test-content-unit-bottom-results-text-inner_correct">Признавайтесь, вы - Лозафан, потому что это правильный ответ и кому нужны слезы на маленьком плоту!</div>
                       <div class="test-content-unit-bottom-results-text-inner_wrong">Так себе вы знаете хит тысячелетия, но теперь эта песня будет с вами весь день. Поздравляем! А правильный ответ - слезы.</div>
                     </div>
